venera/ohos_plugins/zip_flutter/lib/src/generated_bindings.dart


  /// Returns the uncompressed size of the current zip entry.
  ///
  /// @param zip zip archive handler.
  ///
  /// @return the uncompressed size in bytes.
  int zip_entry_uncomp_size(
    ffi.Pointer<zip_t> zip,
  ) {
    return _zip_entry_uncomp_size(
      zip,
    );
  }

  late final _zip_entry_uncomp_sizePtr = _lookup<
          ffi
          .NativeFunction<ffi.UnsignedLongLong Function(ffi.Pointer<zip_t>)>>(
      'zip_entry_uncomp_size');
  late final _zip_entry_uncomp_size =
      _zip_entry_uncomp_sizePtr.asFunction<int Function(ffi.Pointer<zip_t>)>();

  /// Returns the compressed size of the current zip entry.
  ///
  /// @param zip zip archive handler.
  ///
  /// @return the compressed size in bytes.
  int zip_entry_comp_size(
    ffi.Pointer<zip_t> zip,
  ) {
    return _zip_entry_comp_size(
      zip,
    );
  }

  late final _zip_entry_comp_sizePtr = _lookup<
          ffi
          .NativeFunction<ffi.UnsignedLongLong Function(ffi.Pointer<zip_t>)>>(
      'zip_entry_comp_size');
  late final _zip_entry_comp_size =
      _zip_entry_comp_sizePtr.asFunction<int Function(ffi.Pointer<zip_t>)>();

  /// Returns CRC-32 checksum of the current zip entry.
  ///
  /// @param zip zip archive handler.
  ///
  /// @return the CRC-32 checksum.
  int zip_entry_crc32(
    ffi.Pointer<zip_t> zip,
  ) {
    return _zip_entry_crc32(
      zip,
    );
  }

  late final _zip_entry_crc32Ptr =
      _lookup<ffi.NativeFunction<ffi.UnsignedInt Function(ffi.Pointer<zip_t>)>>(
          'zip_entry_crc32');
  late final _zip_entry_crc32 =
      _zip_entry_crc32Ptr.asFunction<int Function(ffi.Pointer<zip_t>)>();

  /// Returns byte offset of the current zip entry
  /// in the archive's central directory.
  ///
  /// @param zip zip archive handler.
  ///
  /// @return the offset in bytes.
  int zip_entry_dir_offset(
    ffi.Pointer<zip_t> zip,
  ) {
    return _zip_entry_dir_offset(
      zip,
    );
  }

  late final _zip_entry_dir_offsetPtr = _lookup<
          ffi
          .NativeFunction<ffi.UnsignedLongLong Function(ffi.Pointer<zip_t>)>>(
      'zip_entry_dir_offset');
  late final _zip_entry_dir_offset =
      _zip_entry_dir_offsetPtr.asFunction<int Function(ffi.Pointer<zip_t>)>();

  /// Returns the current zip entry's local header file offset in bytes.
  ///
  /// @param zip zip archive handler.
  ///
  /// @return the entry's local header file offset in bytes.
  int zip_entry_header_offset(
    ffi.Pointer<zip_t> zip,
  ) {
    return _zip_entry_header_offset(
      zip,
    );
  }

  late final _zip_entry_header_offsetPtr = _lookup<
          ffi
          .NativeFunction<ffi.UnsignedLongLong Function(ffi.Pointer<zip_t>)>>(
      'zip_entry_header_offset');
  late final _zip_entry_header_offset = _zip_entry_header_offsetPtr
      .asFunction<int Function(ffi.Pointer<zip_t>)>();

  /// Compresses an input buffer for the current zip entry.
  ///
  /// @param zip zip archive handler.
  /// @param buf input buffer.
  /// @param bufsize input buffer size (in bytes).
  ///
  /// @return the return code - 0 on success, negative number (< 0) on error.
  int zip_entry_write(
    ffi.Pointer<zip_t> zip,
    ffi.Pointer<ffi.Void> buf,
    int bufsize,
  ) {
    return _zip_entry_write(
      zip,
      buf,
      bufsize,
    );
  }

  late final _zip_entry_writePtr = _lookup<
      ffi.NativeFunction<
          ffi.Int Function(ffi.Pointer<zip_t>, ffi.Pointer<ffi.Void>,
              ffi.Size)>>('zip_entry_write');
  late final _zip_entry_write = _zip_entry_writePtr.asFunction<
      int Function(ffi.Pointer<zip_t>, ffi.Pointer<ffi.Void>, int)>();

  /// Compresses a file for the current zip entry.
  ///
  /// @param zip zip archive handler.
  /// @param filename input file.
  ///
  /// @return the return code - 0 on success, negative number (< 0) on error.
  int zip_entry_fwrite(
    ffi.Pointer<zip_t> zip,
    ffi.Pointer<ffi.Char> filename,
  ) {
    return _zip_entry_fwrite(
      zip,
      filename,
    );
  }

  late final _zip_entry_fwritePtr = _lookup<
      ffi.NativeFunction<
          ffi.Int Function(
              ffi.Pointer<zip_t>, ffi.Pointer<ffi.Char>)>>('zip_entry_fwrite');
  late final _zip_entry_fwrite = _zip_entry_fwritePtr
      .asFunction<int Function(ffi.Pointer<zip_t>, ffi.Pointer<ffi.Char>)>();

  int zip_entry_thread_write(
    ffi.Pointer<zip_t> zip,
    ffi.Pointer<ffi.Char> entryname,
    ffi.Pointer<ffi.Void> buf,
    int bufsize,
  ) {
    return _zip_entry_thread_write(
      zip,
      entryname,
      buf,
      bufsize,
    );
  }

  late final _zip_entry_thread_writePtr = _lookup<
      ffi.NativeFunction<
          ZipThreadWriteHandler Function(
              ffi.Pointer<zip_t>,
              ffi.Pointer<ffi.Char>,
              ffi.Pointer<ffi.Void>,
              ffi.Size)>>('zip_entry_thread_write');
  late final _zip_entry_thread_write = _zip_entry_thread_writePtr.asFunction<
      int Function(ffi.Pointer<zip_t>, ffi.Pointer<ffi.Char>,
          ffi.Pointer<ffi.Void>, int)>();

  int zip_entry_thread_write_files(
    ffi.Pointer<zip_t> zip,
    ffi.Pointer<ffi.Pointer<ffi.Char>> entryname,
    ffi.Pointer<ffi.Pointer<ffi.Char>> filenames,
    int count,
  ) {
    return _zip_entry_thread_write_files(
      zip,
      entryname,
      filenames,
      count,
    );
  }

  late final _zip_entry_thread_write_filesPtr = _lookup<
      ffi.NativeFunction<
          ZipThreadWriteHandler Function(
              ffi.Pointer<zip_t>,
              ffi.Pointer<ffi.Pointer<ffi.Char>>,
              ffi.Pointer<ffi.Pointer<ffi.Char>>,
              ffi.Size)>>('zip_entry_thread_write_files');
  late final _zip_entry_thread_write_files =
      _zip_entry_thread_write_filesPtr.asFunction<
          int Function(ffi.Pointer<zip_t>, ffi.Pointer<ffi.Pointer<ffi.Char>>,
              ffi.Pointer<ffi.Pointer<ffi.Char>>, int)>();

  int zip_thread_write_status(
    ffi.Pointer<zip_t> zip,
    int handler,
  ) {
    return _zip_thread_write_status(
      zip,
      handler,
    );
  }

  late final _zip_thread_write_statusPtr = _lookup<
      ffi.NativeFunction<
          ffi.Int32 Function(ffi.Pointer<zip_t>,
              ZipThreadWriteHandler)>>('zip_thread_write_status');
  late final _zip_thread_write_status = _zip_thread_write_statusPtr
      .asFunction<int Function(ffi.Pointer<zip_t>, int)>();

  /// Extracts the current zip entry into output buffer.
  ///
  /// The function allocates sufficient memory for a output buffer.
  ///
  /// @param zip zip archive handler.
  /// @param buf output buffer.
  /// @param bufsize output buffer size (in bytes).
  ///
  /// @note remember to release memory allocated for a output buffer.
  /// for large entries, please take a look at zip_entry_extract function.
  ///
  /// @return the return code - the number of bytes actually read on success.
  /// Otherwise a negative number (< 0) on error.
  int zip_entry_read(
    ffi.Pointer<zip_t> zip,
    ffi.Pointer<ffi.Pointer<ffi.Void>> buf,
    ffi.Pointer<ffi.Size> bufsize,
  ) {
    return _zip_entry_read(
      zip,
      buf,
      bufsize,
    );
  }

  late final _zip_entry_readPtr = _lookup<
      ffi.NativeFunction<
          ssize_t Function(
              ffi.Pointer<zip_t>,
              ffi.Pointer<ffi.Pointer<ffi.Void>>,
              ffi.Pointer<ffi.Size>)>>('zip_entry_read');
  late final _zip_entry_read = _zip_entry_readPtr.asFunction<
      int Function(ffi.Pointer<zip_t>, ffi.Pointer<ffi.Pointer<ffi.Void>>,
          ffi.Pointer<ffi.Size>)>();

  /// Extracts the current zip entry into a memory buffer using no memory
  /// allocation.
  ///
  /// @param zip zip archive handler.
  /// @param buf preallocated output buffer.
  /// @param bufsize output buffer size (in bytes).
  ///
  /// @note ensure supplied output buffer is large enough.
  /// zip_entry_size function (returns uncompressed size for the current
  /// entry) can be handy to estimate how big buffer is needed.
  /// For large entries, please take a look at zip_entry_extract function.
  ///
  /// @return the return code - the number of bytes actually read on success.
  /// Otherwise a negative number (< 0) on error (e.g. bufsize is not large
  /// enough).
  int zip_entry_noallocread(
    ffi.Pointer<zip_t> zip,
    ffi.Pointer<ffi.Void> buf,
    int bufsize,
  ) {
    return _zip_entry_noallocread(
      zip,
      buf,
      bufsize,
    );
  }

  late final _zip_entry_noallocreadPtr = _lookup<
      ffi.NativeFunction<
          ssize_t Function(ffi.Pointer<zip_t>, ffi.Pointer<ffi.Void>,
              ffi.Size)>>('zip_entry_noallocread');
  late final _zip_entry_noallocread = _zip_entry_noallocreadPtr.asFunction<
      int Function(ffi.Pointer<zip_t>, ffi.Pointer<ffi.Void>, int)>();

  /// Extracts the current zip entry into output file.
  ///
  /// @param zip zip archive handler.
  /// @param filename output file.
  ///
  /// @return the return code - 0 on success, negative number (< 0) on error.
  int zip_entry_fread(
    ffi.Pointer<zip_t> zip,
    ffi.Pointer<ffi.Char> filename,
  ) {
    return _zip_entry_fread(
      zip,
      filename,
    );
  }

  late final _zip_entry_freadPtr = _lookup<
      ffi.NativeFunction<
          ffi.Int Function(
              ffi.Pointer<zip_t>, ffi.Pointer<ffi.Char>)>>('zip_entry_fread');
  late final _zip_entry_fread = _zip_entry_freadPtr
      .asFunction<int Function(ffi.Pointer<zip_t>, ffi.Pointer<ffi.Char>)>();

  /// Extracts the current zip entry using a callback function (on_extract).
  ///
  /// @param zip zip archive handler.
  /// @param on_extract callback function.
  /// @param arg opaque pointer (optional argument, which you can pass to the
  /// on_extract callback)
  ///
  /// @return the return code - 0 on success, negative number (< 0) on error.
  int zip_entry_extract(
    ffi.Pointer<zip_t> zip,
    ffi.Pointer<
            ffi.NativeFunction<
                ffi.Size Function(ffi.Pointer<ffi.Void> arg, ffi.Uint64 offset,
                    ffi.Pointer<ffi.Void> data, ffi.Size size)>>
        on_extract,
    ffi.Pointer<ffi.Void> arg,
  ) {
    return _zip_entry_extract(
      zip,
      on_extract,
      arg,
    );
  }

  late final _zip_entry_extractPtr = _lookup<
      ffi.NativeFunction<
          ffi.Int Function(
              ffi.Pointer<zip_t>,
              ffi.Pointer<
                  ffi.NativeFunction<
                      ffi.Size Function(
                          ffi.Pointer<ffi.Void> arg,
                          ffi.Uint64 offset,
                          ffi.Pointer<ffi.Void> data,
                          ffi.Size size)>>,
              ffi.Pointer<ffi.Void>)>>('zip_entry_extract');
  late final _zip_entry_extract = _zip_entry_extractPtr.asFunction<
      int Function(
          ffi.Pointer<zip_t>,
          ffi.Pointer<
              ffi.NativeFunction<
                  ffi.Size Function(
                      ffi.Pointer<ffi.Void> arg,
                      ffi.Uint64 offset,
                      ffi.Pointer<ffi.Void> data,
                      ffi.Size size)>>,
          ffi.Pointer<ffi.Void>)>();

  /// Returns the number of all entries (files and directories) in the zip archive.
  ///
  /// @param zip zip archive handler.
  ///
  /// @return the return code - the number of entries on success, negative number
  /// (< 0) on error.
  int zip_entries_total(
    ffi.Pointer<zip_t> zip,
  ) {
    return _zip_entries_total(
      zip,
    );
  }

  late final _zip_entries_totalPtr =
      _lookup<ffi.NativeFunction<ssize_t Function(ffi.Pointer<zip_t>)>>(
          'zip_entries_total');
  late final _zip_entries_total =
      _zip_entries_totalPtr.asFunction<int Function(ffi.Pointer<zip_t>)>();
